--- a/index.html
+++ b/index.html
@@ -14,11 +14,27 @@
 
   <div class="grid island-1-2">
     <div class="unit xs-1 s-1 m-1-2 l-1-3">
-
-
-
+      <article class="action-card relative pad-b-1-2">
+        <div class="main">
+          <img class="img-flex" src="images/blue-bolt-976.jpg 975w, images/blue-bolt-480.jpg 480w" alt="">
+        </div>
+      </article>
     </div>
   </div>
-
+  <header class="gutter-1-2">
+    <h2 class="push-1-4">Blue Bolt, Series 6D, № 4</h2>
+    <p class="push-0">Blue Bolt, the human lightning streak, in weird &amp; fantastic stories of the unknown.
+</p>
+  </header>
 </body>
+
+<footer>
+  <menu>
+
+  </menu>
+  <menu>
+
+  </menu>
+</footer>
+
 </html>
