--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="unit xs-1 s-1 m-1-2 l-1-3">
       <article class="action-card relative pad-b-1-2">
         <div class="main">
-          <img class="img-flex" src="images/blue-bolt-976.jpg 975w, images/blue-bolt-480.jpg 480w" alt="">
+          <img class="img-flex" srcset="images/blue-bolt-975.jpg 975w, images/blue-bolt-480.jpg 480w" sizes="(min-width: 60em) 33vw, (min-width:38em) 50vw, 100vw" src="images/blue-bolt-480.jpg" alt="">
         </div>
       </article>
     </div>
@@ -29,11 +29,35 @@
 </body>
 
 <footer>
-  <menu>
-
+  <menu class="action-tools action-tools-top list-group-inline">
+    <li>
+      <button class="btn action-btn">
+        <i class="icon i-1"><svg><use xlink:href="images/icons.svg#fullscreen"></use></svg></i>
+      </button>
+    </li>
+    <li>
+      <button class="btn action-btn">
+        <i class="icon i-1"><svg><use xlink:href="images/icons.svg#download"></use></svg></i>
+      </button>
+    </li>
   </menu>
-  <menu>
 
+  <menu class="action-tools action-tools-bottom list-group-inline">
+    <li>
+      <button class="btn action-btn">
+        <i class="icon i-1"><svg><use xlink:href="images/icons.svg#heart"></use></svg></i>
+      </button>
+    </li>
+    <li>
+      <button class="btn action-btn">
+        <i class="icon i-1"><svg><use xlink:href="images/icons.svg#share"></use></svg></i>
+      </button>
+    </li>
+    <li>
+      <button class="btn action-btn">
+        <i class="icon i-1"><svg><use xlink:href="images/icons.svg#comment"></use></svg></i>
+      </button>
+    </li>
   </menu>
 </footer>
 
